--- a/knn.ipynb
+++ b/knn.ipynb
@@ -157,7 +157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 156,
    "id": "acc38a20-e856-4ef0-ad86-0d3254901d31",
    "metadata": {
     "deletable": false,
@@ -295,7 +295,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 157,
    "id": "a923130a-7794-4703-bc50-8f30757d8b82",
    "metadata": {
     "deletable": false,
@@ -344,7 +344,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 158,
    "id": "87cc4b57-7182-4e69-b6c0-7d5c62ac7ccf",
    "metadata": {
     "deletable": false,
@@ -400,7 +400,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 159,
    "id": "1cec9e3c-1cfa-4865-9510-a852280fdd59",
    "metadata": {
     "deletable": false,
@@ -451,7 +451,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 160,
    "id": "6119e752",
    "metadata": {
     "deletable": false,
@@ -475,7 +475,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 161,
    "id": "35a37ae0-9f55-4164-a400-03182046aa86",
    "metadata": {
     "deletable": false,
@@ -525,7 +525,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 162,
    "id": "ce9486e0-fad6-4d0c-b416-e5456d82efb7",
    "metadata": {
     "deletable": false,
@@ -559,7 +559,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 163,
    "id": "188ba8ec",
    "metadata": {
     "deletable": false,
@@ -606,7 +606,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 164,
    "id": "3a02bba6",
    "metadata": {
     "deletable": false,
@@ -630,7 +630,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 165,
    "id": "e0edb292-5cfd-4be0-adfe-2215515b9a29",
    "metadata": {
     "deletable": false,
@@ -857,7 +857,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 166,
    "id": "046a900f-d184-4171-84c0-6e68b3083698",
    "metadata": {
     "deletable": false,
@@ -1004,7 +1004,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 167,
    "id": "158fee43-2c5e-4010-8d5d-8bd8c87cf9e8",
    "metadata": {
     "deletable": false,
@@ -1055,7 +1055,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 168,
    "id": "a44b0fd6-899c-4d6a-8d9a-55bbba09de36",
    "metadata": {
     "deletable": false,
@@ -1127,7 +1127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 169,
    "id": "15950f8c-c99b-4763-84bb-83f68537c26c",
    "metadata": {
     "deletable": false,
@@ -1187,7 +1187,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 170,
    "id": "a8593698-7727-4b7d-94e2-d57d512ac31c",
    "metadata": {
     "deletable": false,
@@ -1250,7 +1250,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 171,
    "id": "57a7ecfc-433c-447f-899e-038b19677500",
    "metadata": {
     "deletable": false,
@@ -1272,7 +1272,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 172,
    "id": "feda2689",
    "metadata": {
     "deletable": false,
@@ -1325,7 +1325,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 173,
    "id": "b3df0689-29f3-4bb3-8c68-60d3adb29ab1",
    "metadata": {
     "deletable": false,
@@ -1347,7 +1347,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 174,
    "id": "8647dc06",
    "metadata": {
     "deletable": false,
@@ -1444,7 +1444,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 175,
    "id": "38f6f272-9ca4-4411-8eaf-95c8bd8db45b",
    "metadata": {
     "deletable": false,
@@ -1513,7 +1513,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 176,
    "id": "3c8f6fe6-b64e-4f83-8137-9f61733fa7eb",
    "metadata": {
     "deletable": false,
@@ -1565,7 +1565,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 177,
    "id": "742cdbd8-2d93-45e7-9a8d-f6665b001a2a",
    "metadata": {
     "deletable": false,
@@ -1591,7 +1591,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 178,
    "id": "c385933c",
    "metadata": {
     "deletable": false,
@@ -1640,7 +1640,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 179,
    "id": "3141c847-82e8-4583-8ae2-52328a548280",
    "metadata": {
     "deletable": false,
@@ -1712,7 +1712,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 180,
    "id": "af9e8b68-16a5-4a4b-b8b6-fa53315c356d",
    "metadata": {
     "deletable": false,
@@ -1762,7 +1762,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 181,
    "id": "9b16181a-d6bc-4cbe-a134-1e089528f333",
    "metadata": {
     "deletable": false,
@@ -1788,7 +1788,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 182,
    "id": "f111522e-f371-4f73-87ed-36669db83dfe",
    "metadata": {
     "deletable": false,
@@ -1914,7 +1914,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 183,
    "id": "b29a9386-1332-490c-a81d-fe7834930583",
    "metadata": {
     "deletable": false,
@@ -1975,7 +1975,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 184,
    "id": "117ad6b9-79f8-4454-9c26-afbf22a9f323",
    "metadata": {
     "deletable": false,
@@ -2032,7 +2032,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 185,
    "id": "c476f2fe",
    "metadata": {
     "deletable": false,
@@ -2058,7 +2058,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 186,
    "id": "8c7178a0",
    "metadata": {
     "deletable": false,
@@ -2140,7 +2140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 187,
    "id": "dcb24b9a-7dbf-4976-ba79-231a502a4eaa",
    "metadata": {
     "deletable": false,
@@ -2223,7 +2223,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 188,
    "id": "4bfeab82-f5e7-4af6-8347-7b648ea0a52f",
    "metadata": {
     "deletable": false,
@@ -2264,7 +2264,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 189,
    "id": "a7e0c51e",
    "metadata": {
     "deletable": false,
@@ -2311,7 +2311,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 190,
    "id": "3918d770-20b9-48b2-a98d-646a9b9e8c5d",
    "metadata": {
     "deletable": false,
@@ -2348,7 +2348,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 191,
    "id": "84f7171e",
    "metadata": {
     "deletable": false,
@@ -2429,7 +2429,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 192,
    "id": "f50eb314-fbd5-4b36-b39d-dd440d78da4e",
    "metadata": {
     "deletable": false,
@@ -2494,7 +2494,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 193,
    "id": "fb01dcdd-dbe0-48fa-b74b-7466c6d018f3",
    "metadata": {
     "deletable": false,
@@ -2568,7 +2568,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 194,
    "id": "6997ca70-db98-4f34-bdba-7a04881697f0",
    "metadata": {
     "deletable": false,
@@ -2623,7 +2623,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 195,
    "id": "360c3963-9407-4713-9369-e8c1bff80214",
    "metadata": {
     "deletable": false,
@@ -2652,7 +2652,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 196,
    "id": "16dbc196",
    "metadata": {
     "deletable": false,
@@ -2772,7 +2772,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 197,
    "id": "01f867f6",
    "metadata": {},
    "outputs": [],
@@ -2782,7 +2782,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 198,
    "id": "04cff093",
    "metadata": {
     "deletable": false,
@@ -2858,7 +2858,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 134,
+   "execution_count": 241,
    "id": "04a300a6-c877-4bf4-ad52-fe7dfc9a2bbf",
    "metadata": {
     "deletable": false,
@@ -2879,7 +2879,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[('Hermione', 8, 6, 6, 6, ['Griffondor']), ('Drago', 6, 6, 5, 8, ['Griffondor']), ('Cho', 7, 6, 9, 6, ['Serpentar', 'Griffondor']), ('Cedric', 7, 10, 5, 6, ['Griffondor'])]\n"
+      "Hermione 8 6 6 6 ['Griffondor']\n",
+      "Drago 6 6 5 8 ['Griffondor']\n",
+      "Cho 7 6 9 6 ['Serpentar', 'Griffondor']\n",
+      "Cedric 7 10 5 6 ['Griffondor']\n"
      ]
     }
    ],
@@ -2888,8 +2891,10 @@
     "\n",
     "nouveauxEleves = [(\"Hermione\",8,6,6,6,\"\"),(\"Drago\",6,6,5,8,\"\"),(\"Cho\",7,6,9,6,\"\"),(\"Cedric\",7,10,5,6,\"\")]\n",
     "\n",
+    "result = []\n",
     "for i in range(len(nouveauxEleves)):\n",
     "    e = nouveauxEleves[i]\n",
+    "  \n",
     "    poudlard = [\n",
     "    [\"Adam\",      9,   4,  7,   10, \"Serpentar\"],\n",
     "    [\"Ahmed\",     9,   3,  4,   7, \"Griffondor\"], \n",
@@ -2900,9 +2905,7 @@
     "    poulard = proximitesNouvelEleve(e, poudlard,len(poudlard), len(poudlard[0]))\n",
     "    near = kPlusProches(k, poulard, 5, 7)\n",
     "    maj = elemMajoritaire2D(near, len(near),len(near[0]),5)\n",
-    "    nouveauxEleves[i] = (*e[:-1], maj)\n",
-    "    \n",
-    "print(nouveauxEleves)\n"
+    "    print(*e[:-1], maj)"
    ]
   },
   {
@@ -2956,7 +2959,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 135,
+   "execution_count": 242,
    "id": "afaabe3e-6e7d-4d28-b970-57254bd4f6ce",
    "metadata": {
     "deletable": false,
@@ -3000,7 +3003,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 136,
+   "execution_count": 243,
    "id": "12339cf9-76e6-425a-936c-34fbd2a11411",
    "metadata": {
     "deletable": false,
@@ -3053,7 +3056,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 137,
+   "execution_count": 244,
    "id": "a7ac6d84-070e-4273-963f-f1c9451fbc51",
    "metadata": {
     "deletable": false,
@@ -3068,27 +3071,14 @@
      "task": false
     }
    },
-   "outputs": [
-    {
-     "ename": "NotImplementedError",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNotImplementedError\u001b[0m                       Traceback (most recent call last)",
-      "\u001b[1;32m/home/nadir/Desktop/knn-M1/knn.ipynb Cell 113\u001b[0m line \u001b[0;36m2\n\u001b[1;32m      <a href='vscode-notebook-cell:/home/nadir/Desktop/knn-M1/knn.ipynb#Y220sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m \u001b[39m# ENTRER VOTRE CODE A LA PLACE DE CES 2 LIGNES\u001b[39;00m\n\u001b[0;32m----> <a href='vscode-notebook-cell:/home/nadir/Desktop/knn-M1/knn.ipynb#Y220sZmlsZQ%3D%3D?line=1'>2</a>\u001b[0m \u001b[39mraise\u001b[39;00m \u001b[39mNotImplementedError\u001b[39;00m()\n",
-      "\u001b[0;31mNotImplementedError\u001b[0m: "
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "# ENTRER VOTRE CODE A LA PLACE DE CES 2 LIGNES\n",
-    "raise NotImplementedError()"
+    "poudlard2022 = lirePoudlard(\"poudlard.csv\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 245,
    "id": "546706db",
    "metadata": {
     "deletable": false,
@@ -3138,7 +3128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 246,
    "id": "3f216cd2",
    "metadata": {
     "deletable": false,
@@ -3155,31 +3145,9 @@
    },
    "outputs": [],
    "source": [
-    "# ENTRER VOTRE CODE A LA PLACE DE CES 2 LIGNES\n",
-    "raise NotImplementedError()"
+    "row = ['Demelza', 10, 6, 5, 3, 'Griffondor']\n",
+    "assert row in poudlard2022"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "71aacb70-62e2-4889-8899-3dcd8c93d5b6",
-   "metadata": {
-    "deletable": false,
-    "editable": false,
-    "nbgrader": {
-     "cell_type": "code",
-     "checksum": "22000cf0180c0f3465ee257ac432efd9",
-     "grade": true,
-     "grade_id": "cell-5cdeec8d3b949494",
-     "locked": true,
-     "points": 1,
-     "schema_version": 3,
-     "solution": false,
-     "task": false
-    }
-   },
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
@@ -3215,7 +3183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 252,
    "id": "bf03b40d-49d6-4401-af13-5c4140246f6c",
    "metadata": {
     "deletable": false,
@@ -3231,10 +3199,29 @@
      "task": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hermione 8 6 6 6 ['Griffondor']\n",
+      "Drago 6 6 5 8 ['Serpentar']\n",
+      "Cho 7 6 9 6 ['Serdaigle']\n",
+      "Cedric 7 10 5 6 ['Poufsouffle']\n"
+     ]
+    }
+   ],
    "source": [
-    "# ENTRER VOTRE CODE A LA PLACE DE CES 2 LIGNES\n",
-    "raise NotImplementedError()"
+    "k=5\n",
+    "nouveauxEleves = [(\"Hermione\",8,6,6,6,\"\"),(\"Drago\",6,6,5,8,\"\"),(\"Cho\",7,6,9,6,\"\"),(\"Cedric\",7,10,5,6,\"\")]\n",
+    "\n",
+    "for i in range(len(nouveauxEleves)):\n",
+    "    e = nouveauxEleves[i]\n",
+    "    poudlard2022 = lirePoudlard(\"poudlard.csv\")\n",
+    "    poudlard2022 = proximitesNouvelEleve(e, poudlard2022,len(poudlard2022), len(poudlard2022[0]))\n",
+    "    near = kPlusProches(k, poudlard2022, len(poudlard2022), len(poudlard2022[0]))\n",
+    "    maj = elemMajoritaire2D(near, len(near),len(near[0]),5)\n",
+    "    print(*e[:-1], maj)\n"
    ]
   }
  ],
