--- a/knn.ipynb
+++ b/knn.ipynb
@@ -157,7 +157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 156,
+   "execution_count": 1,
    "id": "acc38a20-e856-4ef0-ad86-0d3254901d31",
    "metadata": {
     "deletable": false,
@@ -295,7 +295,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 157,
+   "execution_count": 2,
    "id": "a923130a-7794-4703-bc50-8f30757d8b82",
    "metadata": {
     "deletable": false,
@@ -344,7 +344,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 158,
+   "execution_count": 3,
    "id": "87cc4b57-7182-4e69-b6c0-7d5c62ac7ccf",
    "metadata": {
     "deletable": false,
@@ -400,7 +400,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 159,
+   "execution_count": 4,
    "id": "1cec9e3c-1cfa-4865-9510-a852280fdd59",
    "metadata": {
     "deletable": false,
@@ -451,7 +451,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 160,
+   "execution_count": 5,
    "id": "6119e752",
    "metadata": {
     "deletable": false,
@@ -475,7 +475,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 161,
+   "execution_count": 6,
    "id": "35a37ae0-9f55-4164-a400-03182046aa86",
    "metadata": {
     "deletable": false,
@@ -525,7 +525,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 162,
+   "execution_count": 7,
    "id": "ce9486e0-fad6-4d0c-b416-e5456d82efb7",
    "metadata": {
     "deletable": false,
@@ -559,7 +559,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 163,
+   "execution_count": 8,
    "id": "188ba8ec",
    "metadata": {
     "deletable": false,
@@ -606,7 +606,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 164,
+   "execution_count": 9,
    "id": "3a02bba6",
    "metadata": {
     "deletable": false,
@@ -630,7 +630,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 165,
+   "execution_count": 10,
    "id": "e0edb292-5cfd-4be0-adfe-2215515b9a29",
    "metadata": {
     "deletable": false,
@@ -693,7 +693,21 @@
     }
    },
    "source": [
-    "> VOTRE REPONSE A LA PLACE DE CE TEXTE (format texte ou markdown)"
+    "### Complexité en temps de : tri_selection_1 et tri_selection_2\n",
+    "\n",
+    "    Dans les deux fonctions, lorsqu'un minimum est trouvé, il n'y a qu'une seule opération qui est l'assignation de   val_min à sa nouvelle position dans t (permutation pour tri_selection_1 et pop pour tri_selection_2) qui à l'ordre 1 O(1). \n",
+    "\n",
+    "    La boucle externe \"for i in range(n)\" ==> execute **n itérations**\n",
+    "    La boucle interne \"for j in range(i+1,n)\" ou \"for j in range(n-i)\" ==> n'execute pas n itérations car elle ne parcourt que les éléments restants :\n",
+    "\n",
+    "    Pour i = 0 on (n-1) itérations pour la boucle interne\n",
+    "    Pour i = 1 on (n-2) itérations pour la boucle interne\n",
+    "    ...\n",
+    "    Pour i = n-1 on 1 itération pour la boucle interne\n",
+    "\n",
+    "    Donc, le nombre total d'opérations est approximativement (n - 1) + (n - 2) + ... + 1, ce qui est de l'ordre de n^2 / 2 (Pire cas) et si t est triée (Meilleur cas)\n",
+    "\n",
+    "    La complexité en temps de la fonction tri_selection_1 et tri_selection_2 est donc de l'ordre de O(n^2) est quadratique par rapport à la taille de la liste n."
    ]
   },
   {
@@ -714,7 +728,7 @@
     }
    },
    "source": [
-    "($\\star$) Complexité en espace.\n",
+    "($\\star$) Complexité en espace\n",
     "\n",
     "Que pensez-vous de la complexité en espace de ces 2 versions du tri sélection ?"
    ]
@@ -737,7 +751,17 @@
     }
    },
    "source": [
-    "> VOTRE REPONSE A LA PLACE DE CE TEXTE (format texte ou markdown)"
+    "### Complexité en espace de : tri_selection_1 et tri_selection_2\n",
+    "\n",
+    "**tri_selection_1** :\n",
+    "\n",
+    "    Complexité en espace : O(1) car L'algorithme effectue les échanges directement dans la liste d'origine t sans créer de nouvelles structures de données temporaires. Par conséquent, l'algorithme est \"en place\" en termes de complexité en espace, car il ne nécessite pas de mémoire supplémentaire en dehors des variables locales (val_min, ind_min, i, j).\n",
+    "\n",
+    "**tri_selection_2** :\n",
+    "\n",
+    "    Complexité en espace : O(n) car l'algorithme crée une liste temporaire tmp de la même taille que l'entrée n, Par conséquent, cette version nécessite de la mémoire supplémentaire pour stocker la liste tmp.\n",
+    "\n",
+    "    En général, la version 1 est plus efficace en termes de complexité en espace car elle ne nécessite pas de mémoire supplémentaire pour le stockage temporaire."
    ]
   },
   {
@@ -857,7 +881,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 166,
+   "execution_count": 11,
    "id": "046a900f-d184-4171-84c0-6e68b3083698",
    "metadata": {
     "deletable": false,
@@ -1004,7 +1028,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 167,
+   "execution_count": 12,
    "id": "158fee43-2c5e-4010-8d5d-8bd8c87cf9e8",
    "metadata": {
     "deletable": false,
@@ -1055,7 +1079,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 168,
+   "execution_count": 13,
    "id": "a44b0fd6-899c-4d6a-8d9a-55bbba09de36",
    "metadata": {
     "deletable": false,
@@ -1127,7 +1151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 169,
+   "execution_count": 14,
    "id": "15950f8c-c99b-4763-84bb-83f68537c26c",
    "metadata": {
     "deletable": false,
@@ -1187,7 +1211,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 170,
+   "execution_count": 15,
    "id": "a8593698-7727-4b7d-94e2-d57d512ac31c",
    "metadata": {
     "deletable": false,
@@ -1250,7 +1274,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 171,
+   "execution_count": 16,
    "id": "57a7ecfc-433c-447f-899e-038b19677500",
    "metadata": {
     "deletable": false,
@@ -1272,7 +1296,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 172,
+   "execution_count": 17,
    "id": "feda2689",
    "metadata": {
     "deletable": false,
@@ -1325,7 +1349,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 173,
+   "execution_count": 18,
    "id": "b3df0689-29f3-4bb3-8c68-60d3adb29ab1",
    "metadata": {
     "deletable": false,
@@ -1347,7 +1371,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 174,
+   "execution_count": 19,
    "id": "8647dc06",
    "metadata": {
     "deletable": false,
@@ -1444,7 +1468,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 175,
+   "execution_count": 20,
    "id": "38f6f272-9ca4-4411-8eaf-95c8bd8db45b",
    "metadata": {
     "deletable": false,
@@ -1513,7 +1537,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 176,
+   "execution_count": 21,
    "id": "3c8f6fe6-b64e-4f83-8137-9f61733fa7eb",
    "metadata": {
     "deletable": false,
@@ -1565,7 +1589,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 177,
+   "execution_count": 22,
    "id": "742cdbd8-2d93-45e7-9a8d-f6665b001a2a",
    "metadata": {
     "deletable": false,
@@ -1591,7 +1615,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 178,
+   "execution_count": 23,
    "id": "c385933c",
    "metadata": {
     "deletable": false,
@@ -1640,7 +1664,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 179,
+   "execution_count": 24,
    "id": "3141c847-82e8-4583-8ae2-52328a548280",
    "metadata": {
     "deletable": false,
@@ -1712,7 +1736,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 180,
+   "execution_count": 25,
    "id": "af9e8b68-16a5-4a4b-b8b6-fa53315c356d",
    "metadata": {
     "deletable": false,
@@ -1762,7 +1786,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 181,
+   "execution_count": 26,
    "id": "9b16181a-d6bc-4cbe-a134-1e089528f333",
    "metadata": {
     "deletable": false,
@@ -1788,7 +1812,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 182,
+   "execution_count": 27,
    "id": "f111522e-f371-4f73-87ed-36669db83dfe",
    "metadata": {
     "deletable": false,
@@ -1914,7 +1938,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 183,
+   "execution_count": 28,
    "id": "b29a9386-1332-490c-a81d-fe7834930583",
    "metadata": {
     "deletable": false,
@@ -1975,7 +1999,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 184,
+   "execution_count": 29,
    "id": "117ad6b9-79f8-4454-9c26-afbf22a9f323",
    "metadata": {
     "deletable": false,
@@ -2032,7 +2056,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 185,
+   "execution_count": 30,
    "id": "c476f2fe",
    "metadata": {
     "deletable": false,
@@ -2058,7 +2082,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 186,
+   "execution_count": 31,
    "id": "8c7178a0",
    "metadata": {
     "deletable": false,
@@ -2140,7 +2164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 187,
+   "execution_count": 32,
    "id": "dcb24b9a-7dbf-4976-ba79-231a502a4eaa",
    "metadata": {
     "deletable": false,
@@ -2223,7 +2247,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 188,
+   "execution_count": 33,
    "id": "4bfeab82-f5e7-4af6-8347-7b648ea0a52f",
    "metadata": {
     "deletable": false,
@@ -2264,7 +2288,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 189,
+   "execution_count": 34,
    "id": "a7e0c51e",
    "metadata": {
     "deletable": false,
@@ -2311,7 +2335,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 190,
+   "execution_count": 35,
    "id": "3918d770-20b9-48b2-a98d-646a9b9e8c5d",
    "metadata": {
     "deletable": false,
@@ -2348,7 +2372,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 191,
+   "execution_count": 36,
    "id": "84f7171e",
    "metadata": {
     "deletable": false,
@@ -2429,7 +2453,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 192,
+   "execution_count": 37,
    "id": "f50eb314-fbd5-4b36-b39d-dd440d78da4e",
    "metadata": {
     "deletable": false,
@@ -2494,7 +2518,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 193,
+   "execution_count": 38,
    "id": "fb01dcdd-dbe0-48fa-b74b-7466c6d018f3",
    "metadata": {
     "deletable": false,
@@ -2568,7 +2592,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 194,
+   "execution_count": 39,
    "id": "6997ca70-db98-4f34-bdba-7a04881697f0",
    "metadata": {
     "deletable": false,
@@ -2623,7 +2647,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 195,
+   "execution_count": 40,
    "id": "360c3963-9407-4713-9369-e8c1bff80214",
    "metadata": {
     "deletable": false,
@@ -2652,7 +2676,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 196,
+   "execution_count": 41,
    "id": "16dbc196",
    "metadata": {
     "deletable": false,
@@ -2772,7 +2796,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 197,
+   "execution_count": 42,
    "id": "01f867f6",
    "metadata": {},
    "outputs": [],
@@ -2782,7 +2806,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 198,
+   "execution_count": 43,
    "id": "04cff093",
    "metadata": {
     "deletable": false,
@@ -2858,7 +2882,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 241,
+   "execution_count": 44,
    "id": "04a300a6-c877-4bf4-ad52-fe7dfc9a2bbf",
    "metadata": {
     "deletable": false,
@@ -2959,7 +2983,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 242,
+   "execution_count": 45,
    "id": "afaabe3e-6e7d-4d28-b970-57254bd4f6ce",
    "metadata": {
     "deletable": false,
@@ -3003,7 +3027,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 243,
+   "execution_count": 46,
    "id": "12339cf9-76e6-425a-936c-34fbd2a11411",
    "metadata": {
     "deletable": false,
@@ -3056,7 +3080,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 244,
+   "execution_count": 47,
    "id": "a7ac6d84-070e-4273-963f-f1c9451fbc51",
    "metadata": {
     "deletable": false,
@@ -3078,7 +3102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 245,
+   "execution_count": 48,
    "id": "546706db",
    "metadata": {
     "deletable": false,
@@ -3128,7 +3152,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 246,
+   "execution_count": 49,
    "id": "3f216cd2",
    "metadata": {
     "deletable": false,
@@ -3183,7 +3207,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 252,
+   "execution_count": 50,
    "id": "bf03b40d-49d6-4401-af13-5c4140246f6c",
    "metadata": {
     "deletable": false,
@@ -3212,7 +3236,7 @@
     }
    ],
    "source": [
-    "k=5\n",
+    "k=11\n",
     "nouveauxEleves = [(\"Hermione\",8,6,6,6,\"\"),(\"Drago\",6,6,5,8,\"\"),(\"Cho\",7,6,9,6,\"\"),(\"Cedric\",7,10,5,6,\"\")]\n",
     "\n",
     "for i in range(len(nouveauxEleves)):\n",
